--- a/adl/extension/package.json
+++ b/adl/extension/package.json
@@ -62,7 +62,7 @@
   "homepage": "https://github.com/Azure/adl#readme",
   "readme": "https://github.com/Azure/adl/blob/master/readme.md",
   "devDependencies": {
-    "@types/mocha": "~7.0.2",
+    "@types/mocha": "^7.0.2",
     "@types/node": "14.0.27",
     "@types/vscode": "~1.45.0",
     "@typescript-eslint/eslint-plugin": "2.28.0",
