--- a/adl/sourcemap/package.json
+++ b/adl/sourcemap/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@types/node": "14.0.27",
     "mocha": "7.1.2",
-    "@types/mocha": "~7.0.2",
+    "@types/mocha": "^7.0.2",
     "typescript": "~3.9.5",
     "@typescript-eslint/eslint-plugin": "2.28.0",
     "@typescript-eslint/parser": "2.28.0",
